# --------------------------------------------------------------
# Customizations for serial examples
# --------------------------------------------------------------

# CMake initialization: No customizations
# Build parameters: No customizations
# Build requirements: No customizations

# --------------------------------------------------------------
# Build targets
# --------------------------------------------------------------

# grid management example
#add_subdirectory(grid_management)

# curvature example
add_subdirectory(curvature_example)

# fast marching method example
#add_subdirectory(fast_marching_method)

# reinitialization example
#add_subdirectory(reinitialization_example)
